# fmriproc

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
doc/: requirements.txt
doc/source/: additional_software.rst  bash.rst  cluster_usage.rst  conf.py  configuration.rst  generated_modules.rst  index.rst  installation.rst  links.rst  overview.rst  pipeline_steps.rst  troubleshooting.rst  usage.rst
doc/source/classes/: image.rst  index.rst  optimal.rst  planning.rst  prf.rst  roi.rst  scanner.rst  transform.rst
doc/source/examples/: acompcor.ipynb  prf_verify.ipynb  prfmodelfitter.ipynb
doc/source/nbs/: lazyfmri.ipynb  prfmodelfitter.ipynb  prfviewer.ipynb
fmriproc/: __init__.py  fmriprep.py  image.py  planning.py  prf.py  roi.py  scanner.py  simulate.py  transform.py
fmriproc/examples/: prf.npy
fmriproc/misc/: arguments.txt  cat_batch_r1113.m  cat_batch_r1450.m  cat_batch_r2043.m  cat_batch_r2170.m  cat_batch_r2556.m  cat_batch_r2557.m  cat_batch_r2664.m  launch_spm_gui.m  modules.txt  options.txt  spmBrainMask_spm12_job.m  spm_batch_bias.m  spm_batch_phys.m
fmriproc/notebooks/: prfmodelfitter.ipynb  prfviewer.ipynb
fmriproc/recon/: CombineEchoes_nofor_LS.m  T2s_Fit_LS.m  jump_correction.m  phase_fit.m
misc/: prf_analysis.yml
shell/: README.md  master  spinoza_averageanatomies  spinoza_bestvertex  spinoza_biascorrection  spinoza_biassanlm  spinoza_brainextraction  spinoza_config  spinoza_cortexrecon  spinoza_decoding  spinoza_denoising  spinoza_dura  spinoza_extractregions  spinoza_fitprfs  spinoza_fmriprep  spinoza_freesurfer  spinoza_gdhpipeline  spinoza_install  spinoza_layering  spinoza_line2surface  spinoza_lineplanning  spinoza_linerecon  spinoza_lsprep  spinoza_masking  spinoza_mgdm  spinoza_mriqc  spinoza_nordic  spinoza_profiling  spinoza_qmrimaps  spinoza_registration  spinoza_sagittalsinus  spinoza_scanner2bids  spinoza_segmentfast  spinoza_setup  spinoza_sinusfrommni  spinoza_subcortex
tests/: conftest.py  test_prf.py
