[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmriproc"
dynamic = ["version"]
description = "fmriproc: preprocessing routines for functional (fMRI) and anatomical data (MRI)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
maintainers = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
keywords = ["neuroimaging", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7"

dependencies = [
    "lazyfmri @ git+https://github.com/gjheij/lazyfmri.git",
    "pybest @ git+https://github.com/gjheij/pybest.git",
    "surface_tools @ git+https://github.com/gjheij/surface_tools.git",
    "pymp2rage @ git+https://github.com/gjheij/pymp2rage.git",
    "prfpy @ git+https://github.com/gjheij/prfpy.git",                 # tmp for t_r PR
    "dcm2niix",
    "fmriprep",
    "nipype",
    "niworkflows",
    "pybids",
    "matplotlib",
    "nibabel",
    "scikit-learn",
    "numpy",
    "typing",
    "configparser",
    "mkl-service",
    "future",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools_scm]
write_to = "fmriproc/version.py"

[tool.setuptools.packages.find]
include = ["fmriproc*"]

[tool.setuptools.package-data]
fmriproc = ["version.py", "examples/*", "misc/*", "notebooks/*", "recon/*"]

[tool.setuptools.data-files]
"bin" = ["shell/*", "bin/*"]
